# netdevops-projeto_02

./: .gitignore  Makefile  README.md  ansible.cfg  atualizar.py  create.py  database.py  delete.py  inventory.py  main.py  playbook.yml  pyproject.toml  read.py  registro.py  remover.py  update.py  verificacao.py
scripts/: create.py  database.py  delete.py  ler.py  login.py
